--- a/Develop/index.html
+++ b/Develop/index.html
@@ -38,16 +38,16 @@
   
       <table class="table table-striped table-hover">
         <thread>
-        
-          <div class="container">
+       
+          <div class="container-fluid">
             <div class="row-9">
               <div class="col-md-1">
-                Time
+          T
               </div>
-              <textarea class="form-control-col-md-8" placeholder="Daily" id="floatingTextarea"></textarea>
+              <textarea class="form-control col-md-10" placeholder="Daily" id="floatingTextarea"></textarea>
               </div>
               <div class="col-md-1">
-                Save
+                S
               </div>
             </div>
           </div>
