--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,8 @@
     <!--bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -42,19 +44,125 @@
       
     </header>
 
-      <section class="container justify-align-items-center">
-
-          <div id='9' class="row-g-0">
-
-            <div id="hour" class="col-md-1">
-             9am
+        <div class="container justify-align-items-center">
+          
+          <div id="9" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              9am
             </div>
-
-            <textarea class="col-md-10 form-control" placeholder="Daily" id="textarea"></textarea>
-
-            <button type="button" class="col-md-1 saveBtn"> Save </button>
-
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
           </div>
+
+          <div id="10" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              10am
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="11" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              11am
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="12" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              12pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="1" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              1pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="2" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              2pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="3" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              3pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="4" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              4pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
+          <div id="5" class="row align-items-center">
+            <div class="col-sm-1" id="Timeblocks">
+              5pm
+            </div>
+            <div class="col-sm-10">
+              <textarea class="form-control" placeholder="Daily" id="textarea"></textarea>
+            </div>
+            <div class="col-md-1">
+            <button type="button" class="saveBtn"> Save </button>
+            </div>
+            </div>
+          </div>
+
         </div>
 
 
